# projects

./: .bazelignore  .bazeliskrc  .bazeliskrc.bak  .bazelproject  .bazelrc  .gitattributes  .gitignore  BUILD  CONTRIBUTING.md  CONTRIBUTION.md  MODULE.bazel  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  projectview.bazelproject
.aspect/bazelrc/: javascript.bazelrc
.aspect/cli/: config.yaml
.husky/: pre-commit
game-start/: .dev.vars  BUILD.bazel  config.mjs  gen-migrations-meta.mjs  package.json  pnpm-lock.yaml  wrangler.toml
game-start/migrations/: 0000_broken_micromacro.sql  0000_clumsy_invaders.sql  0000_flowery_madrox.sql  0000_legal_fat_cobra.sql  0000_omniscient_red_ghost.sql  0000_ordinary_goliath.sql
game-start/migrations/meta/: 0000_snapshot.json  _journal.json
game-start/prisma/: BUILD  schema.prisma
game-start/src/: BUILD.bazel  app.ts  render.ts  router.ts  tags.ts  tsconfig.json  types.ts  worker-configuration.d.ts  worker.ts
game-start/src/db/: BUILD.bazel  datetime.ts  identity.ts  migrations.ts  procedures.ts  schema.ts  types.ts
game-start/src/lib/: BUILD.bazel  cloudflare-access.ts  drizzle-d1.ts  index.ts  node.ts  pagination.ts  pg.ts  types.ts  utils.ts
game-start/src/middlewares/: auth.ts
game-start/src/surgio/: BUILD.bazel
game-start/src/surgio/utils/: BUILD.bazel  clash.ts  quantumult.ts  utils.ts
ros-scripts/: BUILD.bazel  package.json  pnpm-lock.yaml  wrangler.toml
ros-scripts/src/: BUILD.bazel  firewall.ts  gist.ts  router.ts  tsconfig.json  worker.ts
tools/drizzle/: BUILD  defs.bzl  package.json  pnpm-lock.yaml
tools/jsts/: package.json  pnpm-lock.yaml
tools/lint/: BUILD  package.json  pnpm-lock.yaml
tools/prisma/: BUILD  defs.bzl  package.json  pnpm-lock.yaml
tools/pwa/: BUILD  package.json  pnpm-lock.yaml
tools/shadcn/: BUILD  package.json  pnpm-lock.yaml
tools/supabase/: BUILD  defs.bzl  entrypoint.js  package.json  pnpm-lock.yaml  wrapper.sh
tools/supabase/shared/: BUILD
tools/supabase/shared/supabase/: config.toml
tools/wrangler/: BUILD  defs.bzl  package.json  pnpm-lock.yaml
watermark/: .swcrc  BUILD.bazel  README.md  components.json  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.ts.json  vite.config.ts
watermark/fixtures/: largefile-and-colorspace.result.txt  largefile-and-colorspace.txt
watermark/src/: App.tsx  BUILD.bazel  main.css  main.tsx  vite-env.d.ts
watermark/src/components/canvas-pool/: canvas-pool.tsx  index.ts
watermark/src/components/form/: field.tsx
watermark/src/components/upload/: upload.tsx
watermark/src/lib/: canvas.ts  config.ts  constants.ts  use-image-element.ts
