load("@game-start-npm//:defs.bzl", "npm_link_all_packages")
load("//tools/drizzle:defs.bzl", "gendb")
load("//tools/wrangler:defs.bzl", "worker")

npm_link_all_packages(name = "node_modules")

worker(
    src = "//game-start/src",
    dev_data = [".dev.vars"],
    platform = "node",
)

gendb(
    name = "gendb",
    src = "//game-start/src/db:schema.js",
    data = ["//game-start/src/db"],
    type = "postgresql",
)
