load("//tools/jsts:defs.bzl", "ts_config", "ts_project")

# gazelle:js_generation_mode none

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
    deps = ["//game-start:node_modules/@cloudflare/workers-types"],
)

ts_project(
    name = "src",
    srcs = [
        "app.ts",
        "lib/cloudflare-access.ts",
        "lib/index.ts",
        "lib/node.ts",
        "lib/pagination.ts",
        "lib/types.ts",
        "middlewares/auth.ts",
        "render.ts",
        "tags.ts",
        "worker.ts",
        "worker-configuration.d.ts",
    ],
    tsconfig = "tsconfig",
    visibility = ["//visibility:public"],
    deps = [
        "//game-start:node_modules/@types/lodash",
        "//game-start:node_modules/drizzle-orm",
        "//game-start:node_modules/hono",
        "//game-start:node_modules/jose",
        "//game-start:node_modules/lodash",
        "//game-start:node_modules/pg",
        "//game-start:node_modules/surgio",
        "//game-start:node_modules/yaml",
        "//game-start/src/db",
        "//game-start/src/surgio",
    ],
)
