load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
    deps = ["//ros-scripts:node_modules/@cloudflare/workers-types"],
)

ts_project(
    name = "src",
    srcs = [
        "firewall.ts",
        "gist.ts",
        "router.ts",
        "worker.ts",
        "worker-configuration.d.ts",
    ],
    tsconfig = "tsconfig",
    visibility = ["//visibility:public"],
    deps = ["//ros-scripts:node_modules/itty-router"],
)
