load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@bazel_skylib//lib:partial.bzl", "partial")

# gazelle:js_generation_mode none

js_library(
    name = "assets",
    srcs = glob([
        "**/*.css",
        "**/*.svg",
    ]),
)

# gazelle:js_project_naming_convention src
ts_project(
    name = "src",
    srcs = [
        "App.tsx",
        "components/canvas-pool/canvas-pool.tsx",
        "components/canvas-pool/index.ts",
        "components/form/field.tsx",
        "components/form/index.ts",
        "components/upload/index.ts",
        "components/upload/upload.tsx",
        "lib/canvas.ts",
        "lib/config.ts",
        "lib/constants.ts",
        "lib/use-image-element.ts",
        "main.tsx",
        "vite-env.d.ts",
    ],
    declaration = True,
    incremental = True,
    preserve_jsx = True,
    resolve_json_module = True,
    transpiler = partial.make(
        swc,
        swcrc = "//watermark:.swcrc",
    ),
    tsconfig = "//watermark:tsconfig",
    validate = False,
    visibility = ["//visibility:public"],
    deps = [
        ":assets",
        "//watermark:node_modules/@fluentui/react-components",
        "//watermark:node_modules/@types/react",
        "//watermark:node_modules/@types/react-dom",
        "//watermark:node_modules/react",
        "//watermark:node_modules/react-dom",
        "//watermark:node_modules/react-hook-form",
        "//watermark:node_modules/swr",
    ],
)
