load("//tools/jsts:defs.bzl", "ts_config", "ts_project")

# gazelle:js_generation_mode none

ts_project(
    name = "db",
    srcs = [
        "datetime.ts",
        "migrations.ts",
        "schema.ts",
    ],
    tsconfig = "//game-start/src:tsconfig",
    deps = ["//game-start:node_modules/drizzle-orm"],
)
