load("//tools/jsts:defs.bzl", "ts_config", "ts_project")

# gazelle:js_generation_mode none

ts_project(
    name = "surgio",
    srcs = [
        "utils/clash.ts",
        "utils/quantumult.ts",
        "utils/utils.ts",
    ],
    tsconfig = "//game-start/src:tsconfig",
    deps = [
        "//game-start:node_modules/@types/lodash",
        "//game-start:node_modules/lodash",
        "//game-start:node_modules/surgio",
    ],
)
